--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,18 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.0"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.0"
+
+    // Retrofit packages
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.google.code.gson:gson:$gson_version"
+
+    // Scarlet package
+    implementation "com.tinder.scarlet:scarlet:$scarlet_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+
+    // Test packages
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
