--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.1'
+        compose_version = '1.0.2'
         dagger_version = '2.38.1'
         room_version = "2.3.0"
         junit_version = "5.7.0"
         retrofit_version = "2.9.0"
         timber_version = "4.7.1"
+        gson_version = "2.8.8"
+        scarlet_version = "0.1.12"
     }
     repositories {
         google()
