--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,10 +69,13 @@ dependencies {
     // Retrofit packages
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.google.code.gson:gson:$gson_version"
-
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logger_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     // Scarlet package
-    implementation "com.tinder.scarlet:scarlet:$scarlet_version"
+    //implementation 'com.tinder.scarlet:scarlet:0.2.4'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation "org.mockito:mockito-core:$mockito_version"
 
     // Test packages
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
