--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,13 @@ buildscript {
         timber_version = "4.7.1"
         gson_version = "2.8.8"
         scarlet_version = "0.2.4"
+        okhttp_logger_version = "4.9.1"
+        mockito_version = "3.12.4"
     }
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
