--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logger_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     // Scarlet package
-    //implementation 'com.tinder.scarlet:scarlet:0.2.4'
+    implementation "com.github.tinder.scarlet:scarlet:$scarlet_version"
+
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     testImplementation "org.mockito:mockito-core:$mockito_version"
