--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -17,6 +19,9 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+    }
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
     }
 
     buildTypes {
@@ -47,6 +52,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
@@ -59,10 +65,10 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.0"
-
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     // Dagger(Hilt) packages
     implementation "com.google.dagger:hilt-android:$dagger_version"
-    annotationProcessor "com.google.dagger:hilt-compiler:$dagger_version"
+    kapt "com.google.dagger:hilt-compiler:$dagger_version"
     testImplementation "com.google.dagger:hilt-android-testing:$dagger_version"
     testAnnotationProcessor "com.google.dagger:hilt-compiler:$dagger_version"
 
@@ -72,8 +78,13 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logger_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     // Scarlet package
-    implementation "com.github.tinder.scarlet:scarlet:$scarlet_version"
-
+    implementation "com.github.tinder.Scarlet:scarlet-core:$scarlet_version"
+    implementation "com.github.tinder.Scarlet:scarlet:$scarlet_version"
+    implementation "com.github.tinder.Scarlet:scarlet-protocol-websocket-okhttp:$scarlet_version"
+    implementation "com.github.tinder.Scarlet:scarlet-message-adapter-gson:$scarlet_version"
+    implementation "com.github.tinder.Scarlet:scarlet-message-adapter-gson:$scarlet_version"
+    //noinspection GradleDependency
+    implementation "com.github.tinder.Scarlet:scarlet-stream-adapter-coroutines:0.2.x-SNAPSHOT"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     testImplementation "org.mockito:mockito-core:$mockito_version"
