--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.21'
+        kotlinCompilerVersion '1.5.30'
     }
     packagingOptions {
         resources {
@@ -58,13 +58,14 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.0"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.0"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     // Dagger(Hilt) packages
     implementation "com.google.dagger:hilt-android:$dagger_version"
@@ -74,14 +75,14 @@ dependencies {
 
     // Retrofit packages
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logger_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
     // Scarlet package
     implementation "com.github.tinder.scarlet:scarlet:$scarlet_version"
     implementation "com.github.tinder.scarlet:scarlet-lifecycle-android:$scarlet_version"
     implementation "com.github.tinder.scarlet:scarlet-protocol-websocket-okhttp:$scarlet_version"
-    implementation "com.github.tinder.scarlet:scarlet-message-adapter-gson:$scarlet_version"
+    implementation "com.github.tinder.scarlet:scarlet-message-adapter-moshi:$scarlet_version"
 
     // Timber log package
     implementation "com.jakewharton.timber:timber:$timber_version"
