--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.2'
-        dagger_version = '2.38.1'
+        compose_version = '1.0.3'
+        dagger_version = '2.39.1'
         room_version = "2.3.0"
         junit_version = "5.7.0"
         retrofit_version = "2.9.0"
         timber_version = "5.0.1"
-        gson_version = "2.8.8"
+        moshi_version = "1.12.0"
         scarlet_version = "0.2.4"
         okhttp_logger_version = "4.9.1"
         mockito_version = "3.12.4"
@@ -19,7 +19,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
