--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     testImplementation "org.mockito:mockito-core:$mockito_version"
 
+    // Moshi wrapped annotation
+    implementation "com.serjltt.moshi:moshi-lazy-adapters:$moshi_lazy_version"
+
+
     // Test packages
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
