--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         retrofit_version = "2.9.0"
         timber_version = "5.0.1"
         moshi_version = "1.12.0"
+        moshi_lazy_version = "2.2"
         scarlet_version = "0.2.4"
         okhttp_logger_version = "4.9.1"
         mockito_version = "3.12.4"
