--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+
     // Dagger(Hilt) packages
     implementation "com.google.dagger:hilt-android:$dagger_version"
     kapt "com.google.dagger:hilt-compiler:$dagger_version"
@@ -78,6 +77,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logger_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+
     // Scarlet package
     implementation "com.github.tinder.scarlet:scarlet:$scarlet_version"
     implementation "com.github.tinder.scarlet:scarlet-lifecycle-android:$scarlet_version"
@@ -86,15 +86,21 @@ dependencies {
 
     // Timber log package
     implementation "com.jakewharton.timber:timber:$timber_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    testImplementation "org.mockito:mockito-core:$mockito_version"
+
+
+
 
     // Moshi wrapped annotation
     implementation "com.serjltt.moshi:moshi-lazy-adapters:$moshi_lazy_version"
-
+    implementation "dev.zacsweers.moshix:moshi-adapters:0.14.1"
 
     // Test packages
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+    androidTestImplementation "org.mockito:mockito-android:$mockito_version"
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
 }
