--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     implementation "com.github.tinder.scarlet:scarlet-lifecycle-android:$scarlet_version"
     implementation "com.github.tinder.scarlet:scarlet-protocol-websocket-okhttp:$scarlet_version"
     implementation "com.github.tinder.scarlet:scarlet-message-adapter-moshi:$scarlet_version"
+    implementation "com.github.tinder.scarlet:scarlet-protocol-websocket-mockserver:$scarlet_version"
 
     // Timber log package
     implementation "com.jakewharton.timber:timber:$timber_version"
@@ -100,8 +101,9 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    testImplementation "org.mockito:mockito-core:$mockito_version"
-    androidTestImplementation "org.mockito:mockito-android:$mockito_version"
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "com.github.fabric8io:mockwebserver:$mockwebserver_version"
 }
