--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.3'
+        compose_version = '1.0.4'
         dagger_version = '2.39.1'
         room_version = "2.3.0"
         junit_version = "5.7.0"
@@ -12,6 +12,7 @@ buildscript {
         scarlet_version = "0.2.4"
         okhttp_logger_version = "4.9.1"
         mockito_version = "4.0.0"
+        mockwebserver_version = "0.1.8"
     }
     repositories {
         google()
@@ -19,7 +20,7 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
         // NOTE: Do not place your application dependencies here; they belong
