--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.example.f1racingcompanion"
         minSdk 24
-        targetSdk 30
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -44,7 +44,7 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.30'
+        kotlinCompilerVersion '1.5.31'
     }
     packagingOptions {
         resources {
@@ -56,15 +56,15 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
 
     // Dagger(Hilt) packages
@@ -78,19 +78,14 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logger_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
-
     // Scarlet package
     implementation "com.github.tinder.scarlet:scarlet:$scarlet_version"
     implementation "com.github.tinder.scarlet:scarlet-lifecycle-android:$scarlet_version"
     implementation "com.github.tinder.scarlet:scarlet-protocol-websocket-okhttp:$scarlet_version"
     implementation "com.github.tinder.scarlet:scarlet-message-adapter-moshi:$scarlet_version"
-    implementation "com.github.tinder.scarlet:scarlet-protocol-websocket-mockserver:$scarlet_version"
 
     // Timber log package
     implementation "com.jakewharton.timber:timber:$timber_version"
-
-
-
 
     // Moshi wrapped annotation
     implementation "com.serjltt.moshi:moshi-lazy-adapters:$moshi_lazy_version"
@@ -105,5 +100,6 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.4.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.2"
     testImplementation "com.github.fabric8io:mockwebserver:$mockwebserver_version"
 }
