--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.4'
+        compose_version = '1.1.0'
         dagger_version = '2.39.1'
         room_version = "2.3.0"
         junit_version = "5.7.0"
@@ -13,6 +13,7 @@ buildscript {
         okhttp_logger_version = "4.9.2"
         mockito_version = "4.0.0"
         mockwebserver_version = "0.1.8"
+        coroutines_version = "1.5.2"
     }
     repositories {
         google()
@@ -20,8 +21,8 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
+        classpath 'com.android.tools.build:gradle:7.1.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
