--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,10 @@ buildscript {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        maven { url 'https://storage.googleapis.com/r8-releases/raw'}
     }
     dependencies {
+        classpath 'com.android.tools:r8:3.1.51'
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
