--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,19 +8,31 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+      - name: Caching Gradle packages
+        uses: actions/cache@v2
         with:
-          arguments: build
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Make files executable
+        run: chmod +x ./gradlew
+      - name: Ktlint
+        run: ./gradlew ktlintcheck --stacktrace
+      - name: Build project
+        run: ./gradlew assemble --stacktrace
+      - name: Test project
+        run: ./gradlew test --stacktrace
