--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    testOptions {
+        unitTests.all {
+            testLogging {
+                showStandardStreams = true
+                showExceptions = true
+                showCauses = true
+                exceptionFormat = "full"
+            }
+        }
+    }
+
     compileOptions {
         coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
