--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ moshi_lazy = "2.2"
 scarlet = "0.2.4"
 okhttp_logger = "4.9.2"
 mockwebserver = "0.1.8"
+navigation = "2.4.2"
 
 [libraries]
 android-gradlePluginClasspath = { module = "com.android.tools.build:gradle", version.ref = "agp"}
@@ -27,13 +28,17 @@ androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-kt
 androidx-test-runner = { module = "androidx.test:runner", version = "1.4.0" }
 androidx-test-rules = { module = "androidx.test:rules", version = "1.4.0" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version = "1.1.3" }
+androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidxlifecycle" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidxlifecycle" }
 
 compose-material-iconsext = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" } # Material design icons (extended)
 compose-material-material = { module = "androidx.compose.material:material", version.ref = "compose" } # Material Design
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" } # Tooling support (Previews, etc.)
-
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
+compose-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
 google-material = { module = "com.google.android.material:material", version = "1.5.0" } # https://github.com/material-components/material-components-android/releases
+
 dagger = { module = "com.google.dagger:dagger", version.ref = "dagger" }
 dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger" }
 
